Alteraçao do projeto Bruno zap

--- a/index.html
+++ b/index.html
@@ -8,22 +8,27 @@
 </head>
 <body>
     <header>
-        <a class="link-header">Products</a>
-        <a class="link-header">Company</a>
-        <a class="link-header">Blog</a>
-        <a class="link-header">Log in</a>
-        <button class="button-Sing-Up">Sign Up</button>
+        <nav>
+            <ul>
+                <li>Products</li>
+                <li>Company</li>
+                <li>Blog</li>
+                <li>Log in</li>
+                <button class="button-Sing-Up">Sign Up</button>
+            </ul>
+        </nav>
     </header>
-    <Main>
-        <img src="./img.png" alt="=img-logo" class="logo-image">
-
-       <div>
-        <h1>Wide coverage location</h1>
-        <p>Shared rides, There’s lots to do in your city, and we’ve got the rides to help you enjoy it all. And they’re all available right from your app.</p>
-        <button class="button-main">Learn more</button>
+    <section>
+        <div  class="container-img">
+            <img src="./img.png" alt="=img-logo" class="logo-image">
+        </div>
+       <div class="container-text">
+            <h1>Wide coverage location</h1>
+            <p>Shared rides, There’s lots to do in your city, and we’ve got the rides to help you enjoy it all. And they’re all available right from your app.</p>
+            <button class="button-main">Learn more</button>
        </div>
 
-    </Main>
+    </section>
     
 </body>
 </html>
